manifests/argo-rollouts/bluegreen/multiroute/bluegreen-rollouts.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-multiroutes-active
spec:
  selector:
    app: bluegreen-multiroutes-rollouts
  ports:
    - port: 80
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-multiroutes-preview
spec:
  selector:
    app: bluegreen-multiroutes-rollouts
  ports:
    - port: 80
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bluegreen-multiroutes-rollouts
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: bluegreen-multiroutes-rollouts
  template:
    metadata:
      labels:
        app: bluegreen-multiroutes-rollouts
    spec:
      containers:
        - name: bluegreen-multiroutes-rollouts
          image: rollouts-demo:green
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    blueGreen:
      activeService: bluegreen-multiroutes-active
      previewService: bluegreen-multiroutes-preview
      autoPromotionEnabled: false
      # NOTE:
      # When enabled, Argo Rollouts treats re-deployment of a version still within
      # the delay window as a warm rollback and skips the preview pause, making it
      # impossible to test autoPromotionEnabled: false behavior properly.
      scaleDownDelaySeconds: 86400
      scaleDownDelayRevisionLimit: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bluegreen-active
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: default
  hostnames:
    - bluegreen-multiroutes.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: bluegreen-multiroutes-active
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bluegreen-preview
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: default
  hostnames:
    - bluegreen-multiroutes-preview.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: bluegreen-multiroutes-preview
          port: 80
          weight: 1
